@@ -6,6 +6,9 @@
 	- Fix max collision avoidance strength in AI GUI.
 	- Fix NRE when adjusting autotuning fields in the SPH.
 	- AI will no longer dive into missiles approaching from directly below.
+- Detectors
+	- Fix radars with ability to lock targets with a signature of 0 not being able to lock targets with a signature of 0.
+	- Fix a division by zero in the standoff jamming effect calculation when the radar signature is 0.
 - Weapons:
 	- Fix bug in nuke impulse calculation and some NREs.
 - RWP:
